test_data/ingress_creation.json
{
  "uid": "1299d386-525b-4032-98ae-1949f69f9cfc",
  "kind": {
    "group": "extensions",
    "kind": "Ingress",
    "version": "v1beta1"
  },
  "resource": {
    "group": "extensions",
    "version": "v1beta1",
    "resource": "ingresses"
  },
  "operation": "CREATE",
  "requestKind": {
    "group": "extensions",
    "version": "v1beta1",
    "kind": "Ingress"
  },
  "userInfo": {
    "username": "alice",
    "uid": "alice-uid",
    "groups": [
      "system:authenticated"
    ]
  },
  "object": {
    "metadata": {
      "name": "prod"
    },
    "spec": {
      "tls": [
        {
          "hosts": [
            "some-host.com"
          ],
          "secretName": "secret-name-tls"
        }
      ],
      "rules": [
        {
          "host": "some-host.com",
          "http": {
            "paths": [
              {
                "path": "/",
                "backend": {
                  "service": {
                    "name": "service",
                    "port": 443
                  }
                }
              }
            ]
          }
        }
      ]
    }
  }
}
